[tool.poetry]
name = "tqdm-jupyter"
version = "0.1.0"
description = ""
authors = ["mr.Shu <mr@shu.io>"]
readme = "README.md"
packages = [{include = "tqdm_jupyter"}]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.5.2"
tqdm = "^4.64.1"
ipywidgets = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
